--- a/.github/workflows/scc.yaml
+++ b/.github/workflows/scc.yaml
@@ -7,8 +7,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Get the lines of code.
+        
+      - name: Get lines of code (more sophisticated)
         id: scc
         uses: iryanbell/scc-docker-action@v1.0.2
         with:
-          args: ${{ env.workspace }}
+          args: ${{ env.workspace }} --format json src
+
+      - name: Make lines of code badge
+        uses: emibcn/badge-action@v2.0.2
+        with:
+          label: Lines of Code
+          status: ${{ fromJson(steps.scc.outputs.scc)[0].Code }}
+          color: 'blue'
+          path: .github/lines.svg
